Initial implementation of web interface (HTML design)

--- a/web/static/templates/footer.html
+++ b/web/static/templates/footer.html
@@ -1,4 +1,19 @@
 {{define "footer"}}
+	<hr>
+	<footer style="padding:3%">
+		<div class="container">
+			<div class="content has-text-centered">
+				<p>
+					<strong>Audisto - data-downloader</strong> by
+					<a href="https://audisto.com" target="_blank">Audisto</a>.
+					The source code is licensed under
+					<a href="https://opensource.org/licenses/mit-license.php" target="_blank">MIT</a>.
+					Source code available at <a href="https://github.com/audisto/data-downloader" target="_blank">Github</a>.
+					You can send us a <a href="https://github.com/audisto/data-downloader/issues" target="_blank">Feedback</a>.
+				</p>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
 {{end}}
