--- a/web/static/templates/header.html
+++ b/web/static/templates/header.html
@@ -7,7 +7,10 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="/static/css/bulma.min.css">
 	<link rel="stylesheet" href="/static/css/fontawesome-all.min.css">
-	<title>Audisto Data Downloader</title>
+	<script src="/static/js/vendor/jquery-3.3.1.min.js"></script>
+	<script src="/static/js/api.js"></script>
+	<script src="/static/js/app.js"></script>
+	<title>Audisto Data Downloader 2</title>
 </head>
 <body>
 	<section class="hero is-light">
@@ -32,7 +35,7 @@
 					<!-- Right Side -->
 					<div class="level-right">
 						<div class="level-item">
-							<a class="button is-warning is-pulled-right is-small is-rounded">
+							<a id="insert-creds-button" class="button is-warning is-pulled-right is-small is-rounded">
 								<span class="icon">
 									<i class="fas fa-key"></i>
 								</span>
@@ -45,4 +48,42 @@
 			</div>
 		</div>
 	</section>
+
+
+<!-- Login -->
+<div id="login-modal" class="modal is-clipped">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+		<form action="/login" method="POST" id="login-form">
+
+			<header class="modal-card-head">
+				<p class="modal-card-title">Insert your credentials once</p>
+				<button id="modal-close-button" class="delete" aria-label="close"></button>
+			</header>
+			<section class="modal-card-body">
+
+				<div class="field">
+					<label class="label">Username</label>
+					<div class="control">
+						<input name="loginUsername" id="login-username-input" class="input" type="text" placeholder="e.g. 8bcc51d9-vrn4-5bc4-cghi-90beqn23e62c" value="{{ .username }}" required>
+					</div>
+					<p class="help">Your Audisto API username</p>
+				</div>
+
+				<div class="field">
+					<label class="label">Password</label>
+					<div class="control">
+						<input name="loginPassword" id="login-password-input" class="input" type="password" placeholder="e.g. 705b3219-br7c-5e6b-pee4-tt1d62wi689d" value="{{ .password }}" required>
+					</div>
+					<p class="help">Your Audisto API password</p>
+				</div>
+			</section>
+			<footer class="modal-card-foot">
+				<button id="do-login" class="button is-success" type="submit">Save</button>
+				<a id="login-logout-button" class="button is-warning">Logout</a>
+				<a id="login-cancel" class="button is-pulled-right">Cancel</a>
+			</footer>
+		</form>
+  </div>
+</div>
 {{end}}
