Prevent notification messages from disappearing, unless manually closed by the user

--- a/web/static/templates/header.html
+++ b/web/static/templates/header.html
@@ -58,7 +58,7 @@
 
 			<header class="modal-card-head">
 				<p class="modal-card-title">Insert your credentials once</p>
-				<button id="modal-close-button" class="delete" aria-label="close"></button>
+				<button type="button" id="modal-close-button" class="delete" aria-label="close"></button>
 			</header>
 			<section class="modal-card-body">
 
