--- a/web/static/templates/home.html
+++ b/web/static/templates/home.html
@@ -31,7 +31,8 @@
 				<div id="errors" class="column is-narrow has-text-right is-2">Errors: N/A</div>
 			</div>
 			<div class="notification is-success" id="notifications" style="display: none">
-				<strong>Info:</strong> Download started.
+				<button type="button" class="delete" id="close-notification-btn" aria-label="close"></button>
+				<p id="notifications-content"></p>
 			</div>
 		</div>
 	</section>
